samples/_failures_safe/1761275065_96a96f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e775611b.c: In function ‘load_log_file’:
./samples/SAFE/__tmp_e775611b.c:118:14: error: expected ‘)’ at end of input
  118 |     if (!file
      |        ~     ^
      |              )
./samples/SAFE/__tmp_e775611b.c:118:5: error: expected declaration or statement at end of input
  118 |     if (!file
      |     ^~
